moved subdir to local variables